# sit

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  appveyor.yml
ci/: before_deploy.sh  script.sh
src/: main.rs  runner.rs  tests.rs
src/cli/: parser.rs
src/commands/: combos.rs  mod.rs
src/tests/: tests.rs
